# stubborn

./: Cargo.toml  Makefile  README.md
.github/workflows/: checks.yaml  tests.yaml
src/: lib.rs
src/strategies/: jitter.rs  mod.rs  stop.rs  wait.rs
